--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-    <img class="Mountain" src="images/mountain.png" alt="Mountain-image">
+    <img class="Mountain" src="images/Mountain.png" alt="Mountain-image">
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile" src="images/profile.png" alt="profile-pic">
+      <img class="profile" src="images/Profile.png" alt="profile-pic">
 
       <h2>Hello!</h2>
       <p class="intro">I am a BCA graduate, Currently pursuing masters in computer application. I love coffee and binge-watching. ❤️</p>
@@ -33,7 +33,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="code-img" src="images/code.gif" alt="code-img">
+          <img class="code-img" src="images/Code.gif" alt="code-img">
 
           <h3>Design & Development</h3>
           <p>I am coding for the last six years. And over time, I have got across and learned a dozen design and development languages and tools. And I tend to continue learning.</p>
