--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img class="profile" src="images/Profile.png" alt="profile-pic">
 
       <h2>Hello!</h2>
-      <p class="intro">I am a BCA graduate, Currently pursuing masters in computer application. I love coffee and binge-watching. ❤️</p>
+      <p class="intro">I am a BCA graduate, Currently pursuing masters in computer application. I love Tea and Table-tennis.❤️</p>
       <hr />
       <div class="skills">
         <h2>My Skills.</h2>
@@ -64,7 +64,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/tarun-gallani-a332931a4/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/tarun_gallani/">Instagram</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://tarungallani.github.io/cv/">Website</a>
     <p class="copyright">© 2020 Tarun Gallani @tarun_gallani.</p>
   </div>
 </body>
