--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tarun Gallani</title>
-  <link rel="icon" href="css/favicon.ico">
+  <link rel="icon" href="css/favicon (3).ico">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Sacramento&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700&family=Raleway&display=swap" rel="stylesheet">
