--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="skill-row">
           <img class="binge" src="images/binge.png" alt="binge-img">
 
-          <h3>binge-watching Challenge</h3>
+          <h3>Binge-Watching Challenge</h3>
           <p>But my best skill is binge-watching. I have watched a zillion tv and web series in recent years. The Originals and Sherlock are my all-time favorite.</p>
 
         </div>
